--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
 </head>
 <body>
     <section class="topSection">
+        <nav></nav>
         <h1>Mike Gulotta</h1>
-        <nav>
+        <div class="links">
             <button><a href="index.html">Home</a></button>
             <button><a href="about.html">About</a></button>
             <button><a href="contact.html">Contact</a></button>
             <button><a href="projects.html">Projects</a></button>
+        </div>
         </nav>
         <h2>Introduction to my projects</h2>
         <p>This is my website that contains all of my projects!<br> <br>Please feel free to browse the site and let me know if you have any questions or comments. <br><br> You will be able to contact me using the button within the header, or the button within the footer. <br> <br> Enjoy! <br></p>
-        <img src="https://picsum.photos/1200/200" alt="topImage"/>
+    </section>
+    <section class="bg-img">
+
     </section>
     <section class="middleSection">
         <img src="https://picsum.photos/id/10/300/600" alt="">
@@ -25,7 +29,7 @@
         <img src="https://picsum.photos/id/12/300/600" alt="">
         <img src="https://picsum.photos/id/13/300/600" alt="">
         <div class="description">
-        As you can see, here are all of my projects. I really like these projects and I hope you enjoy them too!
+        <p>As you can see, here are all of my projects. I really like these projects and I hope you enjoy them too!</p>
         </div>
     </section>
     <footer>
